js added in res html

--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
             <h1 class="display-4 top">Hot Resturant</h1>
             <hr>
             <h2 class="lead top"> Book your seat before they all are gone </h2>
-            <button type="button" class="btn btn-primary bt  text-center">View Table</button>
-            <button type="button" class="btn btn-danger bt text-center">Make Reservation</button>
+            <a href="tables.html" class="btn btn-primary bt  text-center">View Table</a>
+            <a href="reserve.html" type="button" class="btn btn-danger bt text-center">Make Reservation</a>
         </div>
     </div>
     <div>
