tablesTest.js added to link

--- a/tables.html
+++ b/tables.html
@@ -56,7 +56,8 @@
 
     </div>
 
-    <script src="tablesTest.js"></script>
+    <script type="text/javascript" href="tablesTest.js">
+    </script>
 </body>
 
 </html>
